--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ethers": "^6.0.0",
-    "next": "15.1.0",
+    "ethers": "^6.13.4",
+    "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "web3modal": "^1.9.12"
