--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "13.2.4",
     "ethers": "^6.13.4",
-    "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "hardhat": "^2.22.17",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
@@ -30,8 +32,6 @@
     "@types/mocha": "^10.0.10",
     "autoprefixer": "^10.4.20",
     "chai": "^4.2.0",
-    "cross-env": "^7.0.3",
-    "hardhat": "^2.22.17",
     "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8.4.49",
     "solidity-coverage": "^0.8.1",
